--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -135,7 +135,9 @@ jobs:
           EOF
 
       - name: Setup Pages
+        id: pages
         uses: actions/configure-pages@v4
+        continue-on-error: true
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -145,9 +147,25 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        continue-on-error: true
+
+      - name: Output deployment URL
+        if: steps.deployment.outcome == 'success'
+        run: |
+          echo "✅ Test report deployed to: ${{ steps.deployment.outputs.page_url }}"
+          echo "REPORT_URL=${{ steps.deployment.outputs.page_url }}" >> $GITHUB_ENV
+
+      - name: Deployment failed notice
+        if: steps.deployment.outcome != 'success'
+        run: |
+          echo "⚠️ GitHub Pages deployment failed or is not configured."
+          echo "📋 To enable GitHub Pages:"
+          echo "   1. Go to Settings → Pages"
+          echo "   2. Set Source to 'GitHub Actions'"
+          echo "   3. Re-run this workflow"
 
       - name: Comment PR with report link
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && steps.deployment.outcome == 'success'
         uses: actions/github-script@v7
         with:
           script: |
